k8s/02-opencast/09-opencast-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencast-worker
  namespace: opencast
  labels:
    edu.my.srv: opencast-worker
spec:
  replicas: 2
  minReadySeconds: 60
  strategy:
    type: Recreate
  selector:
    matchLabels:
      edu.my.srv: opencast-worker
  template:
    metadata:
      labels:
        edu.my.srv: opencast-worker
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - name: opencast-worker
          image: opencast/worker:4.1
          volumeMounts:
            - name: opencast-config
              mountPath: /etc/opencast
            - name: opencast-data-persistent-storage
              mountPath: /data
          resources:
            requests:
              memory: "5Gi"
              cpu: "2.5"
            limits:
              memory: "7Gi"
              cpu: "4"
      volumes:
        - name: opencast-config
          configMap:
            name: opencast-config
            items:
              - key: custom.properties-worker
                path: custom.properties
              - key: mh_default_org.cfg
                path: org.opencastproject.organization-mh_default_org.cfg
        - name: opencast-data-persistent-storage
          persistentVolumeClaim:
            claimName: opencast-data-pv-claim
