k8s/02-opencast/04-activemq.yaml
apiVersion: v1
kind: Service
metadata:
  name: activemq
  namespace: opencast
  labels:
    edu.my.srv: activemq
spec:
  selector:
    edu.my.srv: activemq
  ports:
    - port: 61616

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: activemq
  namespace: opencast
  labels:
    edu.my.srv: activemq
spec:
  replicas: 1
  selector:
    matchLabels:
      edu.my.srv: activemq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        edu.my.srv: activemq
    spec:
      restartPolicy: Always
      containers:
        - name: activemq
          image: webcenter/activemq:5.14.3
          ports:
            - containerPort: 61616
              protocol: TCP
          volumeMounts:
            - name: activemq-persistent-storage
              mountPath: /opt/activemq/data
            - name: activemq-config
              mountPath: /opt/activemq/conf/activemq.xml
              subPath: activemq.xml
          resources:
            requests:
              memory: 1Gi
              cpu: 800m
            limits:
              memory: 2Gi
              cpu: 2
      volumes:
        - name: activemq-config
          configMap:
            name: activemq-config
        - name: activemq-persistent-storage
          persistentVolumeClaim:
            claimName: activemq-pv-claim
