k8s/02-opencast/05-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: opencast
  labels:
    edu.my.srv: mariadb
spec:
  selector:
    edu.my.srv: mariadb
  ports:
    - port: 3306

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: opencast
  labels:
    edu.my.srv: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      edu.my.srv: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        edu.my.srv: mariadb
    spec:
      restartPolicy: Always
      containers:
        - name: mariadb
          image: mariadb:10.0
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - name: mariadb-persistent-storage
              mountPath: /var/lib/mysql
            - name: mariadb-initdb
              mountPath: /docker-entrypoint-initdb.d
          resources:
            requests:
              memory: 1Gi
              cpu: 800m
            limits:
              memory: 2Gi
              cpu: 2
      volumes:
        - name: mariadb-initdb
          configMap:
            name: mariadb-config
            items:
              - key: opencast-ddl.sql
                path: opencast-ddl.sql
        - name: mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: mariadb-pv-claim
