k8s/02-opencast/07-opencast-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencast-admin
  namespace: opencast
  labels:
    edu.my.srv: opencast-admin
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  selector:
    edu.my.srv: opencast-admin
  ports:
    - port: 80
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencast-admin
  namespace: opencast
  labels:
    edu.my.srv: opencast-admin
spec:
  replicas: 1
  minReadySeconds: 60
  strategy:
    type: Recreate
  selector:
    matchLabels:
      edu.my.srv: opencast-admin
  template:
    metadata:
      labels:
        edu.my.srv: opencast-admin
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - name: opencast-admin
          image: opencast/admin:4.1
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: opencast-config
              mountPath: /etc/opencast
            - name: opencast-data-persistent-storage
              mountPath: /data
          resources:
            requests:
              memory: "4Gi"
              cpu: "2"
            limits:
              memory: "5Gi"
              cpu: "3"
          readinessProbe:
            initialDelaySeconds: 60
            periodSeconds: 120
            httpGet:
              path: /info/me.json
              port: 8080
              scheme: HTTP
      volumes:
        - name: opencast-config
          configMap:
            name: opencast-config
            items:
              - key: custom.properties-admin
                path: custom.properties
              - key: mh_default_org.cfg
                path: org.opencastproject.organization-mh_default_org.cfg
        - name: opencast-data-persistent-storage
          persistentVolumeClaim:
            claimName: opencast-data-pv-claim
